exports[`<App /> matches render snapshot - no children 1`] = `
<div
  className="container">
  <div
    className="header">
    <h1>
      MusicQ
    </h1>
  </div>
</div>
`;

exports[`<App /> matches render snapshot - with children 1`] = `
<div
  className="container">
  <div
    className="header">
    <h1>
      MusicQ
    </h1>
  </div>
  <div>
    hello.
  </div>
</div>
`;
